--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 	id 'java'
 }
 bootJar {
-	archiveFileName = 'demo-front-0.0.1-SNAPSHOT.jar'
+	archiveFileName = 'aylee-sample-front-0.0.1-SNAPSHOT.jar'
 }
 
 sourceCompatibility = '11'
